--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,19 +16,16 @@ body {
     border: 2px solid red;
   }
   .gameover {
-    background-color: black;
-    &::after {
-      content: "Game Over !";
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: black;
-      opacity: 0.8;
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: white;
-      font-size: 20px;
+    transition: 1s ease-in;
+    display: none;
+    opacity: 0;
+    h2 {
+      color: red;
     }
+  }
+  .paused {
+    transition: 1s ease-in;
+    display: none;
+    opacity: 0;
   }
 }
